[gd_scene load_steps=4 format=2]

[ext_resource path="res://features/intro/themes/ft_menu_button.tres" type="DynamicFont" id=1]
[ext_resource path="res://features/intro/themes/ft_logo.tres" type="DynamicFont" id=2]
[ext_resource path="res://features/intro/scripts/scr_start_game.gd" type="Script" id=3]

[node name="start_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="logo" type="Label" parent="content"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "My First Game"
align = 1
valign = 1

[node name="vmenu" type="VBoxContainer" parent="content"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -44.5
margin_right = 53.5
margin_bottom = 44.5

[node name="button_start" type="Button" parent="content/vmenu"]
margin_right = 107.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Start Game"

[node name="button_settings" type="Button" parent="content/vmenu"]
margin_top = 31.0
margin_right = 107.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"

[node name="button_exit" type="Button" parent="content/vmenu"]
margin_top = 62.0
margin_right = 107.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"

[node name="credits" type="Label" parent="content"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
text = "..."
align = 1
valign = 1
